--- a/NotraMuse/Base.lproj/Main.storyboard
+++ b/NotraMuse/Base.lproj/Main.storyboard
@@ -238,7 +238,7 @@
                                                         <constraint firstAttribute="width" constant="35" id="vJX-8K-IQo"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dmv-IA-zFn">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jese Rodriguez" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dmv-IA-zFn">
                                                     <rect key="frame" x="63" y="309" width="331" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="JUi-zr-G3M"/>
@@ -269,52 +269,64 @@
                                             <outlet property="usernameLabel" destination="Dmv-IA-zFn" id="WHL-dj-CaJ"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SinglePlaylistSongTableViewCell" rowHeight="105" id="wgZ-rT-wiH" customClass="SinglePlaylistSongTableViewCell" customModule="NotraMuse" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="414.66666603088379" width="414" height="105"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SinglePlaylistSongTableViewCell" rowHeight="96" id="wgZ-rT-wiH" customClass="SinglePlaylistSongTableViewCell" customModule="NotraMuse" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="414.66666603088379" width="414" height="96"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wgZ-rT-wiH" id="Abe-C8-ORg">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXC-hS-14m">
-                                                    <rect key="frame" x="103" y="0.0" width="231" height="105"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXC-hS-14m">
+                                                    <rect key="frame" x="95" y="34.666666666666664" width="244" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="EU2-hf-PMf"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03:21" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDF-QJ-Mul">
-                                                    <rect key="frame" x="344" y="11" width="50" height="83"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03:21" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDF-QJ-Mul">
+                                                    <rect key="frame" x="349" y="34.666666666666664" width="45" height="14.333333333333336"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="FmD-wt-4dR"/>
+                                                        <constraint firstAttribute="width" constant="45" id="BkG-Mx-2mb"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music-notes-neon-sign-illustration-vector" translatesAutoresizingMaskIntoConstraints="NO" id="2OH-Vc-Uuz">
-                                                    <rect key="frame" x="20" y="11" width="73" height="83"/>
+                                                    <rect key="frame" x="20" y="11" width="65" height="74"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="2OH-Vc-Uuz" secondAttribute="height" multiplier="73:83" id="agx-e1-rJv"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1DF-7q-Uqa">
+                                                    <rect key="frame" x="95.000000000000014" y="51.666666666666664" width="215.33333333333337" height="19.999999999999993"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <color key="textColor" red="0.15544196925652631" green="0.20738118489583335" blue="0.11942482242927586" alpha="0.73543057487159358" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="2OH-Vc-Uuz" firstAttribute="top" secondItem="Abe-C8-ORg" secondAttribute="topMargin" id="83v-EA-VS3"/>
-                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="top" secondItem="Abe-C8-ORg" secondAttribute="topMargin" id="F1l-4R-8Ie"/>
+                                                <constraint firstItem="uXC-hS-14m" firstAttribute="leading" secondItem="2OH-Vc-Uuz" secondAttribute="trailing" constant="10" id="8eE-K5-gCg"/>
                                                 <constraint firstItem="2OH-Vc-Uuz" firstAttribute="leading" secondItem="Abe-C8-ORg" secondAttribute="leadingMargin" id="GL5-j8-tV7"/>
                                                 <constraint firstItem="2OH-Vc-Uuz" firstAttribute="leading" secondItem="Abe-C8-ORg" secondAttribute="leading" constant="20" id="Jnl-wv-nsr"/>
                                                 <constraint firstItem="2OH-Vc-Uuz" firstAttribute="bottom" secondItem="Abe-C8-ORg" secondAttribute="bottomMargin" id="Mjl-Yk-G1z"/>
-                                                <constraint firstAttribute="bottom" secondItem="uXC-hS-14m" secondAttribute="bottom" id="RmT-nn-zoJ"/>
-                                                <constraint firstItem="uXC-hS-14m" firstAttribute="leading" secondItem="2OH-Vc-Uuz" secondAttribute="trailing" constant="10" id="UkQ-rQ-J52"/>
-                                                <constraint firstItem="uXC-hS-14m" firstAttribute="top" secondItem="Abe-C8-ORg" secondAttribute="top" id="Wrc-0g-876"/>
+                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="leading" secondItem="uXC-hS-14m" secondAttribute="trailing" constant="10" id="NQc-pL-AJ7"/>
+                                                <constraint firstItem="1DF-7q-Uqa" firstAttribute="leading" secondItem="2OH-Vc-Uuz" secondAttribute="trailing" constant="10" id="TOR-7m-Uzx"/>
+                                                <constraint firstItem="1DF-7q-Uqa" firstAttribute="top" secondItem="uXC-hS-14m" secondAttribute="bottom" id="TZz-iE-bc3"/>
+                                                <constraint firstItem="uXC-hS-14m" firstAttribute="centerY" secondItem="2OH-Vc-Uuz" secondAttribute="centerY" constant="-5" id="VAk-O8-czW"/>
                                                 <constraint firstItem="2OH-Vc-Uuz" firstAttribute="leading" secondItem="Abe-C8-ORg" secondAttribute="leadingMargin" id="ZGa-Kz-3N9"/>
-                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="trailing" secondItem="Abe-C8-ORg" secondAttribute="trailingMargin" id="ZGl-6v-tTr"/>
-                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="bottom" secondItem="Abe-C8-ORg" secondAttribute="bottomMargin" id="hx0-8a-CDD"/>
-                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="leading" secondItem="uXC-hS-14m" secondAttribute="trailing" constant="10" id="tag-M2-uYR"/>
+                                                <constraint firstItem="1DF-7q-Uqa" firstAttribute="height" secondItem="uXC-hS-14m" secondAttribute="height" multiplier="1.17647" id="bhJ-dX-xd9"/>
+                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="top" secondItem="uXC-hS-14m" secondAttribute="top" id="dDo-8o-Pxl"/>
+                                                <constraint firstItem="1DF-7q-Uqa" firstAttribute="width" secondItem="uXC-hS-14m" secondAttribute="width" multiplier="0.882124" id="fhS-lw-fvp"/>
+                                                <constraint firstItem="SDF-QJ-Mul" firstAttribute="trailing" secondItem="Abe-C8-ORg" secondAttribute="trailingMargin" id="hFM-Yx-KfN"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="AlbumImage" destination="2OH-Vc-Uuz" id="U4u-Si-kRP"/>
+                                            <outlet property="artistNameLabel" destination="1DF-7q-Uqa" id="uP2-fR-MxV"/>
                                             <outlet property="songDurationLabel" destination="SDF-QJ-Mul" id="3EG-2z-ipC"/>
                                             <outlet property="songTitleLabel" destination="uXC-hS-14m" id="jUz-bS-Hh8"/>
                                         </connections>
@@ -543,13 +555,13 @@
                                                                             <constraint firstAttribute="width" secondItem="47S-d9-mQx" secondAttribute="height" multiplier="131:150" id="flL-xD-DRF"/>
                                                                         </constraints>
                                                                     </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" misplaced="YES" text="Song Name Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5nB-4A-LlY">
-                                                                        <rect key="frame" x="10" y="139" width="103" height="30"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" misplaced="YES" text="Song Name Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5nB-4A-LlY">
+                                                                        <rect key="frame" x="10" y="138.99999999999997" width="103" height="30"/>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="30" id="Dnu-DK-xr7"/>
                                                                         </constraints>
-                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
