--- a/NotraMuse/Base.lproj/Main.storyboard
+++ b/NotraMuse/Base.lproj/Main.storyboard
@@ -386,24 +386,25 @@
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZLB-us-OIm">
                                         <rect key="frame" x="18" y="665" width="378" height="31"/>
                                     </slider>
-                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vcl-Uy-d6X">
-                                        <rect key="frame" x="187" y="575" width="40" height="40"/>
+                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vcl-Uy-d6X">
+                                        <rect key="frame" x="187" y="577.33333333333337" width="40" height="35.666666666666629"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="BlT-Dp-Ee3"/>
                                             <constraint firstAttribute="width" constant="40" id="hdn-xm-U36"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <backgroundConfiguration key="background" imageContentMode="scaleAspectFill">
-                                                <imageReference key="image" image="play" catalog="system" symbolScale="default" renderingMode="hierarchical-single">
-                                                    <hierarchicalColors>
-                                                        <color red="0.78144782779999999" green="0.4845833182" blue="0.92491501570000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                        <color systemColor="secondaryLabelColor"/>
-                                                        <color systemColor="tertiaryLabelColor"/>
-                                                    </hierarchicalColors>
-                                                </imageReference>
-                                            </backgroundConfiguration>
-                                        </buttonConfiguration>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal">
+                                            <imageReference key="backgroundImage" image="pause" catalog="system" renderingMode="hierarchical-single">
+                                                <hierarchicalColors>
+                                                    <color systemColor="labelColor"/>
+                                                    <color systemColor="secondaryLabelColor"/>
+                                                    <color systemColor="tertiaryLabelColor"/>
+                                                </hierarchicalColors>
+                                            </imageReference>
+                                        </state>
+                                        <connections>
+                                            <action selector="pressPlayPauseButton:" destination="WZr-mN-QVt" eventType="touchUpInside" id="15H-Z4-fuQ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJh-UN-HgI">
                                         <rect key="frame" x="267" y="575" width="40" height="40"/>
@@ -423,6 +424,9 @@
                                                 </imageReference>
                                             </backgroundConfiguration>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="pressforwardButton:" destination="WZr-mN-QVt" eventType="touchUpInside" id="Cam-pS-m5H"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hl-mH-WaK">
                                         <rect key="frame" x="107" y="575" width="40" height="40"/>
@@ -442,6 +446,9 @@
                                                 </imageReference>
                                             </backgroundConfiguration>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="pressBackwardButton:" destination="WZr-mN-QVt" eventType="touchUpInside" id="LMr-Yc-zl6"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="17611" translatesAutoresizingMaskIntoConstraints="NO" id="6vh-qH-5dq">
                                         <rect key="frame" x="8" y="8" width="398" height="379"/>
@@ -1264,11 +1271,11 @@
         <image name="music.note.list" catalog="system" width="128" height="115"/>
         <image name="music.quarternote.3" catalog="system" width="128" height="103"/>
         <image name="number" catalog="system" width="128" height="124"/>
+        <image name="pause" catalog="system" width="88" height="128"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <image name="play" catalog="system" width="120" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
